lab 14/terra10-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: terra10-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: terra10
