lab 14/terra10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terra10
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: terra10
